[package]
name = "tcp-proxy"
description = "TCP Proxy for Deduplication"
version = "1.0.0"
edition = "2021"
authors = ["Eyal Zohar <eyalzo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
clap = { version = "4.0.29", features = ["derive"] }
nix = "0.25.0"
